--- a/public/assets/layout/css/layout-light.css
+++ b/public/assets/layout/css/layout-light.css
@@ -501,7 +501,7 @@ a {
 }
 .widget-overview-box.widget-overview-box-5 .overview-icon {
   background: #9575cd;
-  color: #500992;
+  color: rgb(80, 9, 146);
 }
 .widget-overview-box.widget-overview-box-6 {
   border-left-color: #da3479;
@@ -639,7 +639,7 @@ a {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 .widget-pricing-card.deal {
-  background-image: linear-gradient(45deg, #105da1 0%, #1f8ce3 100%);
+  background-image: linear-gradient(45deg, rgb(16, 93, 161) 0%, rgb(31, 140, 227) 100%);
 }
 .widget-pricing-card > span {
   display: block;
