--- a/public/assets/sass/other.css
+++ b/public/assets/sass/other.css
@@ -223,7 +223,7 @@ nav.v-breadcrumb ul > li:last-child {
 }
 
 .border {
-  border: 1px solid #ededec;
+  border: 1px solid rgb(237, 237, 236);
 }
 
 .border-dark {
@@ -286,7 +286,7 @@ nav.v-breadcrumb ul > li:last-child {
   padding-right: 6px;
   font-size: 14px;
   line-height: 120%;
-  color: #37352f;
+  color: rgb(55, 53, 47);
   margin: 0px;
 }
 .v-chip .label {
@@ -311,7 +311,7 @@ nav.v-breadcrumb ul > li:last-child {
 }
 
 .dark {
-  color: #37352f !important;
+  color: rgb(55, 53, 47) !important;
 }
 
 .triangle-point-right {
